--- a/BugTracker/src/main/resources/application.properties
+++ b/BugTracker/src/main/resources/application.properties
@@ -1,1 +1,22 @@
+# DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
+spring.datasource.url=jdbc:mysql://localhost:3306/bugtracker?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
+spring.datasource.username=root
+spring.datasource.password=08uzO2NlT02qEARX7xPm&UWFrEGb*T5Hx25AkLCW
 
+# Hibernate
+
+# The SQL dialect makes Hibernate generate better SQL for the chosen database
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
+
+# Hibernate ddl auto (create, create-drop, validate, update)
+spring.jpa.hibernate.ddl-auto = update
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type=TRACE
+
+#Spring Security login
+server.port= 8443
+server.ssl.enabled= true
+server.ssl.key-store= src/main/resources/bootsecurity.p12
+server.ssl.key-store-password= H@UHO!Wblt4RlfZ^d495JPHZP8Vg1vmSEifR$X!p
+server.ssl.key-store-type= PKCS12
+server.ssl.key-alias= bootsecurity
