added properties for mysql files

--- a/BugTracker/src/main/resources/application.properties
+++ b/BugTracker/src/main/resources/application.properties
@@ -20,3 +20,13 @@ server.ssl.key-store= src/main/resources/bootsecurity.p12
 server.ssl.key-store-password= H@UHO!Wblt4RlfZ^d495JPHZP8Vg1vmSEifR$X!p
 server.ssl.key-store-type= PKCS12
 server.ssl.key-alias= bootsecurity
+
+## MULTIPART (MultipartProperties)
+# Enable multipart uploads
+spring.servlet.multipart.enabled=true
+# Threshold after which files are written to disk.
+spring.servlet.multipart.file-size-threshold=2KB
+# Max file size.
+spring.servlet.multipart.max-file-size=200MB
+# Max Request Size
+spring.servlet.multipart.max-request-size=215MB
