--- a/BugTracker/src/main/resources/application.properties
+++ b/BugTracker/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+app.init-db=true
+
 # DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 spring.datasource.url=jdbc:mysql://localhost:3306/bugtracker?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
 spring.datasource.username=root
