--- a/BugTracker/src/main/resources/application.properties
+++ b/BugTracker/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-app.init-db=true
+app.init-db=false
 
 # DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 spring.datasource.url=jdbc:mysql://localhost:3306/bugtracker?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
